--- a/app/src/main/res/layout/fragment_info_activity.xml
+++ b/app/src/main/res/layout/fragment_info_activity.xml
@@ -39,18 +39,19 @@
             android:background="@drawable/ic_heart_event"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintTop_toBottomOf="@id/titulo" />
+
         <TextView
             android:id="@+id/description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="52dp"
             android:gravity="start"
             android:text="Descripcion del plan......"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/titulo" />
+
         <TextView
             android:id="@+id/tvfecha"
             android:layout_width="wrap_content"
@@ -129,21 +130,30 @@
             app:layout_constraintStart_toEndOf="@id/tvlugar"
             app:layout_constraintTop_toBottomOf="@id/horario" />
 
+        <ImageButton
+            android:id="@+id/info"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_planet2"
+            android:layout_marginTop="32dp"
+            android:paddingBottom="30dp"
+            app:layout_constraintStart_toStartOf="@id/leftguide"
+            app:layout_constraintTop_toBottomOf="@id/lugar" />
+
+
         <TextView
             android:id="@+id/link"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="36dp"
+            android:gravity="start"
             android:paddingBottom="30dp"
             android:text="Link del evento"
-            android:gravity="center"
-            android:textSize="20sp"
             android:textColor="@color/secondary"
-            app:layout_constraintTop_toBottomOf="@id/lugar"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@id/rightguide"
-            app:layout_constraintStart_toStartOf="@id/leftguide"
-            />
-
+            app:layout_constraintStart_toEndOf="@id/info"
+            app:layout_constraintTop_toBottomOf="@id/lugar" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/leftguide"
