--- a/app/src/main/res/layout/infowindow_layout.xml
+++ b/app/src/main/res/layout/infowindow_layout.xml
@@ -1,55 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_constraintStart_toStartOf="@+id/leftguide"
-    app:layout_constraintEnd_toStartOf="@+id/rightguide"
-    android:background="@color/white">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/leftguide"
+        app:layout_constraintEnd_toStartOf="@+id/rightguide"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/white">
 
-        <TextView
-            android:id="@+id/nombre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Obra de teatro"
-            app:layout_constraintStart_toStartOf="@+id/leftguide"
-            app:layout_constraintEnd_toStartOf="@+id/rightguide"
-            android:textSize="27dp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:background="@color/primary_dark"
-            android:textColor="@color/white"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            />
+            <TextView
+                android:id="@+id/nombre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Obra de teatro"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:background="@color/primary_dark"
+                android:textColor="@color/white"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                />
 
-        <TextView
-            android:id="@+id/fechas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/leftguide"
-            app:layout_constraintEnd_toStartOf="@+id/rightguide"
-            app:layout_constraintTop_toBottomOf="@+id/nombre"
-            android:text="25/02-26/05"
-            android:textSize="18dp"
-            android:padding="5dp"
-            android:layout_centerHorizontal="true"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/calendar"
+                android:background="@drawable/ic_calendar"
+                android:layout_marginTop="6dp"
+                android:layout_marginLeft="17dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nombre"
+                android:contentDescription="TODO" />
 
-        <TextView
-            android:id="@+id/horas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/leftguide"
-            app:layout_constraintEnd_toStartOf="@+id/rightguide"
-            app:layout_constraintTop_toBottomOf="@+id/fechas"
-            android:text="19.00"
-            android:textSize="18dp"
-            android:padding="5dp"
-            android:layout_centerHorizontal="true"/>
+            <TextView
+                android:id="@+id/fechas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/calendar"
+                app:layout_constraintTop_toBottomOf="@+id/nombre"
+                android:text="25/02-26/05"
+                android:textSize="15dp"
+                android:layout_marginLeft="5px"
+                android:padding="5dp"
+                />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/clock"
+                android:layout_marginTop="6dp"
+                android:layout_marginLeft="17dp"
+                android:background="@drawable/ic_clock"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fechas"
+                android:contentDescription="TODO" />
+            <TextView
+                android:id="@+id/horas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/clock"
+                app:layout_constraintTop_toBottomOf="@+id/fechas"
 
+                android:text="12.00"
+                android:textSize="15dp"
+                android:padding="5dp"/>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <androidx.constraintlayout.widget.Guideline
