--- a/app/src/main/res/layout/activity_main_app.xml
+++ b/app/src/main/res/layout/activity_main_app.xml
@@ -58,6 +58,17 @@
 
             </LinearLayout>
         </com.google.android.material.navigation.NavigationView>
+        <Button
+            android:id="@+id/btntransparent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+            app:layout_constraintStart_toStartOf="@id/nav_view"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@android:color/transparent">
+
+        </Button>
     </FrameLayout>
     <ImageButton
         android:id="@+id/image_button"
@@ -70,14 +81,5 @@
         android:contentDescription="@string/repass" />
         <!--style="@style/RoundImageButtonStyle"-->
 
-    <Button
-        android:id="@+id/btntransparent"
-        android:layout_width="130dp"
-        android:layout_height="900dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-        android:background="@android:color/transparent"
-        >
 
-    </Button>
     </androidx.constraintlayout.widget.ConstraintLayout>
