--- a/app/src/main/res/layout/fragment_info_activity.xml
+++ b/app/src/main/res/layout/fragment_info_activity.xml
@@ -36,7 +36,7 @@
             android:id="@+id/btnedit"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/ic_heart_event"
+            android:background="@drawable/love"
             app:layout_constraintEnd_toStartOf="@id/rightguide"
             app:layout_constraintTop_toBottomOf="@id/titulo" />
 
