--- a/app/src/main/res/layout/favlist_item.xml
+++ b/app/src/main/res/layout/favlist_item.xml
@@ -19,9 +19,9 @@
             android:layout_marginEnd="5dp"
             >
         <ImageView
+            android:id="@+id/catIV"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@color/black"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="20dp"/>
         </RelativeLayout>
@@ -38,14 +38,7 @@
             android:textSize="20dp"
             android:ellipsize="end"/>
 
-        <ImageButton
-            android:id="@+id/removeFavBtn"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentEnd="true"
-            android:padding="0dp"
-            android:background="@drawable/love2"
-            />
+
         <TextView
             android:id="@+id/fli_desc"
             android:layout_width="match_parent"
@@ -64,7 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:text="HORA"/>
+            android:text="HORA"
+            android:maxLength="13"/>
 
         <TextView
             android:id="@+id/fli_date"
@@ -73,6 +67,7 @@
             android:layout_alignParentBottom="true"
             android:layout_toEndOf="@id/Rl_fli"
             android:maxLines="1"
-            android:text="FECHA"/>
+            android:text="FECHA"
+            android:maxLength="23"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
