--- a/app/src/main/res/layout/fragment_info_activity.xml
+++ b/app/src/main/res/layout/fragment_info_activity.xml
@@ -53,14 +53,13 @@
             app:layout_constraintStart_toStartOf="@id/leftguide"
             app:layout_constraintTop_toBottomOf="@id/titulo" />
 
-        <TextView
+        <ImageView
             android:id="@+id/tvfecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20sp"
+            android:layout_height="20sp"
             android:layout_marginTop="32dp"
-            android:text="@string/date"
-            android:textSize="15sp"
-            android:textStyle="bold"
+            android:background="@drawable/ic_calendar"
+            android:layout_marginLeft="50dp"
             app:layout_constraintTop_toBottomOf="@id/description"
             app:layout_constraintEnd_toStartOf="@id/fecha"
             app:layout_constraintStart_toStartOf="@id/leftguide"
@@ -70,7 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="10dp"
             android:text="Fecha del evento"
             android:gravity="start"
             android:textSize="15sp"
@@ -79,15 +78,13 @@
             app:layout_constraintStart_toEndOf="@id/tvfecha"
             />
 
-        <TextView
+        <ImageView
             android:id="@+id/tvhorario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_marginTop="13dp"
-            android:text="@string/schedule"
-            android:gravity="start"
-            android:textSize="15sp"
-            android:textStyle="bold"
+            android:background="@drawable/ic_clock"
+            android:layout_marginLeft="50dp"
             app:layout_constraintTop_toBottomOf="@id/tvfecha"
             app:layout_constraintEnd_toStartOf="@id/horario"
             app:layout_constraintStart_toStartOf="@id/leftguide"
@@ -97,7 +94,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
-            android:layout_marginStart="36dp"
+            android:layout_marginStart="10dp"
             android:text="Horario del evento"
             android:gravity="start"
             android:textSize="15sp"
@@ -105,14 +102,14 @@
             app:layout_constraintEnd_toEndOf="@id/rightguide"
             app:layout_constraintStart_toEndOf="@id/tvhorario"
             />
-        <TextView
+
+        <ImageView
             android:id="@+id/tvlugar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
-            android:text="@string/place"
-            android:textStyle="bold"
-            android:textSize="15sp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/ic_chincheta"
+            android:layout_marginLeft="50dp"
             app:layout_constraintTop_toBottomOf="@id/tvhorario"
             app:layout_constraintEnd_toStartOf="@id/lugar"
             app:layout_constraintStart_toStartOf="@id/leftguide"
@@ -123,7 +120,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
-            android:layout_marginStart="49dp"
+            android:layout_marginStart="10dp"
             android:gravity="start"
             android:text="Lugar del evento"
             android:textSize="15sp"
