--- a/app/src/main/res/layout/list_item_suscriber.xml
+++ b/app/src/main/res/layout/list_item_suscriber.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:maxLength="20"
         android:text="nombre"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
